fix for overflow

--- a/src/components/baseComponents/classInvitationDialog/ClassInvitationDialog.scss
+++ b/src/components/baseComponents/classInvitationDialog/ClassInvitationDialog.scss
@@ -44,6 +44,10 @@
         p {
             display: inline;
         }
+
+        br {
+            display: none !important;
+        }
     }
 
     .btn {
